2012-06-18  Raymond Penners  <raymond.penners@intenct.nl>

	* allauth, socialaccount: Removed the last remaining bits of
	hardcodedness with respect to the enabled social authentication
	providers.

2012-06-11  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added ACCOUNT_AUTHENTICATION_METHOD setting, supporting
	login by username, e-mail or both.

2012-06-08  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.5.0 released.

2012-06-07  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added setting ACCOUNT_PASSWORD_MIN_LENGTH for
	specifying the minimum password length.

2012-06-05  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added generic OAuth2 support. Added GitHub
	support as proof of concept.

2012-06-04  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: More refactoring: generic provider & OAuth
	consumer approach. Added LinkedIn support to test this approach.

2012-06-03  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Introduced generic models for storing social
	apps, accounts and tokens in a central and consistent manner,
	making way for adding support for more account providers. Note:
	there is more refactoring to be done -- this first step only
	focuses on the database models.

2012-03-29  Raymond Penners  <raymond.penners@intenct.nl>

	* account: E-mail confirmation mails are now automatically resent
	whenever a user attempts to login with an unverified e-mail
	address (if ACCOUNT_EMAIL_VERIFICATION=True).

2012-03-25  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.4.0 released.

2012-03-15  Raymond Penners  <raymond.penners@intenct.nl>

	* account: The render_value parameter of all PasswordInput fields
	used can now be configured via a setting.

2012-03-15  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added support for prefixing the subject of sent emails.

2012-03-14  Raymond Penners  <raymond.penners@intenct.nl>
