@@ -8,6 +8,7 @@ from django.core.urlresolvers import reverse
 from django.contrib.auth import login
 from django.utils.translation import ugettext_lazy as _, ugettext
 from django.http import HttpResponseRedirect
+from django.utils import importlib
 
 from emailconfirmation.models import EmailAddress, EmailConfirmation
 
@@ -44,9 +45,20 @@ def get_default_redirect(request, redirect_field_name="next",
     return redirect_to
 
 
+
+_user_display_callable = None
+
 def user_display(user):
-    func = getattr(settings, "ACCOUNT_USER_DISPLAY", lambda user: user.username)
-    return func(user)
+    global _user_display_callable
+    if not _user_display_callable:
+        f = getattr(settings, "ACCOUNT_USER_DISPLAY", 
+                    lambda user: user.username)
+        if not hasattr(f, '__call__'):
+            assert isinstance(f, str)
+            pkg, func = f.rsplit('.',1)
+            f = getattr(importlib.import_module(pkg), func)
+        _user_display_callable = f
+    return _user_display_callable(user)
 
 
 # def has_openid(request):
